# mdlr

./: .gitignore  com.mdlr.server.plist  error_records_mdlr.txt  generate_icons.py  mdlr-agent.sh  mdlr-server.py  pyproject.toml  setup.py
chrome-extension/: background.js  manifest.json  popup.html  popup.js
miyuki/: __main__.py  miyuki-new.py  miyuki.py
